src/test/ui/unsized/issue-91803.stderr
error[E0746]: return type cannot have an unboxed trait object
  --> $DIR/issue-91803.rs:3:43
   |
LL | fn or<'a>(first: &'static dyn Foo<'a>) -> dyn Foo<'a> {
   |                                           ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = note: for information on `impl Trait`, see <https://doc.rust-lang.org/book/ch10-02-traits.html#returning-types-that-implement-traits>
help: use `impl Foo<'a>` as the return type, as all return paths are of type `Box<_>`, which implements `Foo<'a>`
   |
LL | fn or<'a>(first: &'static dyn Foo<'a>) -> impl Foo<'a> {
   |                                           ~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0746`.
